# hm_fiber_bot

./: README.md  aiogram_run.py  create_bot.py  main.py  pyproject.toml
db_handler/: db_requests.py
handlers/: info_template.py  product.py  start.py
keybords/: all_keybords.py
